fix: Revert Buttons alignment workaround
This caused issues for non-Buttons inner block alignment. The original
issue of Buttons inner blocks not rendering inline was addressed in
43c0b14918f8ed03037c01d94321922dc31a7fa3.

--- a/packages/block-editor/src/hooks/use-editor-wrapper-styles.native.scss
+++ b/packages/block-editor/src/hooks/use-editor-wrapper-styles.native.scss
@@ -9,7 +9,3 @@
 	width: 100%;
 	max-width: 580;
 }
-
-.use-editor-wrapper-styles--inner-block {
-	max-width: 580;
-}
